src/objects/CrmId_Change_Result__c.object
<CustomObject>
    <fields>
        <fullName>Number_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Deleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Failed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Updated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_History__c</fullName>
        <label>Sync History</label>
        <referenceTo>Sync_History__c</referenceTo>
        <relationshipLabel>CrmId Change Results</relationshipLabel>
        <relationshipName>CrmId_Change_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DAZN CrmId Change Result</label>
    <nameField>
        <label>CrmId Change Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN CrmId Change Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>